# pico-tutorial

./: CMakeLists.txt  README.md  pico_sdk_import.cmake
blink_pin/: blink_pin.c
button_led/: CMakeLists.txt
buzzer_active/: CMakeLists.txt  buzzer_active.c
buzzer_passive/: buzzer_passive.c
meteor_flowing_light/: CMakeLists.txt  meteor_flowing_light.c
potentiometer_rgb/: potentiometer_rgb.c
potentiometer_voltage/: CMakeLists.txt  potentiometer_voltage.c
projects/blink_builtin/: CMakeLists.txt  blink_builtin.c
projects/blink_pin/: CMakeLists.txt  README.md  blink_pin.c
projects/button_led/: CMakeLists.txt  README.md  button_led.c
projects/buzzer_active/: CMakeLists.txt  buzzer_active.c
projects/buzzer_passive/: CMakeLists.txt  buzzer_passive.c
projects/flowing_light/: CMakeLists.txt  README.md  flowing_light.c
projects/flowing_meteor_light/: CMakeLists.txt  flowing_meteor_light.c
projects/joystick_out/: CMakeLists.txt  README.md  joystick_out.c
projects/photoresistor_led/: CMakeLists.txt  README.md  photoresistor_led.c
projects/potentiometer_led/: CMakeLists.txt  potentiometer_led.c
projects/potentiometer_rainbow/: CMakeLists.txt  README.md  potentiometer_rainbow.c  ws2812.pio
projects/potentiometer_rgb/: CMakeLists.txt  README.md  potentiometer_rgb.c
projects/potentiometer_voltage/: CMakeLists.txt  potentiometer_voltage.c
projects/pwm_led/: CMakeLists.txt  pwm_led.c
projects/rgb_gradient_led/: CMakeLists.txt  rgb_gradient_led.c
projects/rgb_led/: CMakeLists.txt  rgb_led.c
projects/serial_communication/: CMakeLists.txt  serial_communication.c
projects/thermistor_temp/: CMakeLists.txt  README.md  thermistor_temp.c
projects/ws2812/: CMakeLists.txt  ws2812.c
pwm_led/: CMakeLists.txt
rgb_gradient_led/: CMakeLists.txt
rgb_led/: CMakeLists.txt
serial_communication/: CMakeLists.txt
ws2812/: CMakeLists.txt  ws2812.c
