cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(pico_tutorial C CXX ASM)
set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 23)
pico_sdk_init()

add_compile_options(-Wall)

add_subdirectory(projects/blink_builtin)
add_subdirectory(projects/blink_pin)
add_subdirectory(projects/button_led)
add_subdirectory(projects/buzzer_active)
add_subdirectory(projects/buzzer_passive)
add_subdirectory(projects/flowing_light)
add_subdirectory(projects/flowing_meteor_light)
add_subdirectory(projects/potentiometer_led)
add_subdirectory(projects/potentiometer_rainbow)
add_subdirectory(projects/potentiometer_rgb)
add_subdirectory(projects/potentiometer_voltage)
add_subdirectory(projects/pwm_led)
add_subdirectory(projects/rgb_gradient_led)
add_subdirectory(projects/rgb_led)
add_subdirectory(projects/serial_communication)
add_subdirectory(projects/ws2812)